- wxXmlDocument can now optionally preserve whitespace (Francesco Montorsi)
- Added wxBookCtrl::ChangeSelection() and wxTextCtrl::ChangeValue() to provide
  event-free alternatives to SetSelection() and SetValue() functions; see the
  "Events generated by the user vs programmatically generated events" paragraph
  in the "Event handling overview" topic for more info

All (GUI):

- Support for right-to-left text layout (started by Diaa Sami during Google Summer of
  Code, with a lot of help from Tim Kosse and others).
- wxAnimationCtrl added (Francesco Montorsi)
- Added wxAboutBox() function for displaying the standard about dialog
- Added wxID_PAGE_SETUP standard id.
- Added wxSize::IncBy() and DecBy() methods.
- Added wxTextCtrl::IsEmpty()
- Added file type parameter to wxTextCtrl::LoadFile, wxTextCtrl::SaveFile for
  consistency with wxRichTextCtrl.
- wxRichTextCtrl: fixed range out-by-one bug to be consistent with wxTextCtrl API,
  fixed some attribute bugs and added wxRichTextStyleComboCtrl.
- Added wxWindow::IsDoubleBuffered()
- Added wxHL_ALIGN_* flags to wxHyperlinkCtrl (Francesco Montorsi)
- Added wxGauge::Pulse() and wxProgressDialog::UpdatePulse() (Francesco Montorsi)

wxMSW:

- Implemented wxComboBox::SetEditable().
- wxSemaphore::Post() returns wxSEMA_OVERFLOW as documented (Christian Walther)
- Fixed a bug whereby static controls didn't use the correct text colour if the
  parent's background colour had been set (most noticeable when switching to a
  high-contrast theme).
- Respect wxBU_EXACTFIT style in wxToggleButton (Alexander Borovsky)

wxMac:

- Add parameter to the --enable-universal_binary configure option for the path
  to the SDK.

wxGTK:

- Automatically use stock items for menu items with standard ids.
- Setting cursor now works for all controls.
- Implemented right-to-left support
- Implemented left indentation and tab stops support in wxTextCtrl (Tim Kosse).
- Fixed wxHTML rendering of underlined text of multiple words (Mart Raudsepp)
