@@ -1,0 +1,21 @@
+<?xml version="1.0" ?>
+<!-- $Id$ -->
+
+<makefile>
+
+    <include file="presets/wx.bkl"/>
+
+    <exe id="minimal" template="wx">
+        <app-type>gui</app-type>
+        <debug-info>on</debug-info>
+        <runtime-libs>dynamic</runtime-libs>
+
+        <sources>minimal.cpp</sources>
+
+        <wx-lib>core</wx-lib>
+        <wx-lib>base</wx-lib>
+
+        <install-to>$(BINDIR)</install-to>
+    </exe>
+
+</makefile>
